--- a/source/_posts/深度学习/2021-4-21- 主流的深度学习开源工具.md
+++ b/source/_posts/深度学习/2021-4-21- 主流的深度学习开源工具.md
@@ -11,5 +11,5 @@ title: 主流的深度学习开源工具
 | PaddlePaddle                       | 百度                             | py,c++             |
 | TensorFlow                         | google                           | py,c++             |
 | Theano                             | 蒙特利尔大学                     | py                 |
-| Torch                              | Item1                            | lua,c,  luaJIT     |
-| PyTorch                            | Item1                            | py                 |
+| Torch                              |                                  | lua,c,  luaJIT     |
+| PyTorch                            |                                  | py                 |
