--- a/source/_posts/git/2021-4-19-git常见问题.md
+++ b/source/_posts/git/2021-4-19-git常见问题.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      git常见问题
-author:     陈诗樵
+author:     Alasq
 header-img: img/post-bg-re-vs-ng2.jpg
 catalog: true
 tags:
