--- a/source/_posts/博客/2021-4-7-在博客中使用简书的图片.md
+++ b/source/_posts/博客/2021-4-7-在博客中使用简书的图片.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      2021-4-7-在博客中使用简书的图片
 date:       2021-4-7
-author:    陈诗樵
+author:    Alasq
 catalog: true
 tags:
     - 博客
