--- a/source/_posts/2021-4-19- docker的一些命令.md
+++ b/source/_posts/2021-4-19- docker的一些命令.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      2021-4-19- docker的一些命令 
 date:       2021-4-19
-author:    陈诗樵
+author:    Alasq
 catalog: true
 tags:
     - docker
