--- a/source/_posts/git/2021-4-19-git常见问题.md
+++ b/source/_posts/git/2021-4-19-git常见问题.md
@@ -3,6 +3,7 @@ layout:     post
 title:      git常见问题
 author:     Alasq
 header-img: img/post-bg-re-vs-ng2.jpg
+date:       2021-4-19
 catalog: true
 tags:
     - git
