--- a/source/_posts/面试/腾讯初面.md
+++ b/source/_posts/面试/腾讯初面.md
@@ -56,3 +56,14 @@ function getResult(list,target) {
 最后面试官要了我博客地址，算是加分项吧，主要我前面基础部分确实答的太差了，我也不抱任何希望。
 
 今晚在想是否找个小厂更好，就算进了大厂始终就是个螺丝钉，找个小厂掌控全局，虽然累点，但是应该更有成就感吧！！！
+
+## 基础题目参考文章
+1. TCP https://blog.csdn.net/jun2016425/article/details/81506353
+2. http2.0 https://zhuanlan.zhihu.com/p/26559480
+3. https相关 https://mp.weixin.qq.com/s/qPwgKpCv6IJgBRotIzBrUw
+4. 301永久重定向,304代表命中缓存,这个是我自己17年看的东西,4年了,确实记不住 https://www.jianshu.com/p/c0f18670f0d8
+5. vue 2.0采用`Object.defineProperties`定义`get` `set`方法,vue3.0采用`Proxy`对象实现
+6. 事假循环的  https://www.cnblogs.com/jiasm/p/9482443.html
+7. 回流必定触发重绘,回流更消耗性能 https://zhuanlan.zhihu.com/p/52076790
+8. script标签 https://lifemi.cn/2021/09/25/defer-async%E7%9A%84%E5%8C%BA%E5%88%AB/
+9. 上面的看完就知道这个了
