错别字修复

--- a/source/_posts/面试/腾讯二面.md
+++ b/source/_posts/面试/腾讯二面.md
@@ -37,4 +37,4 @@ tags: 面试
 
 ### 不稳的点
 1. 面试官比较关注我16年以前做啥的，主要做天猫电商，长城宽带，千米电脑快修。刚毕业确实没想清楚想做什么，也尝试过好多行业，这有问题吗？反正我觉得没问题
-2. 外包仔的经历面试官也有点在乎，但愿面试官唯才是举，英雄不问出处吧。刘邦泗水亭长出身，刘备买鞋，朱元璋放牛出身，我至少也是个本科对吧。
+2. 外包仔的经历面试官也有点在乎，但愿面试官唯才是举，英雄不问出处吧。刘邦泗水亭长出身，刘备卖草鞋出身，朱元璋放牛出身，我至少也是个本科对吧。
