--- a/source/_posts/深度学习/2021-4-21- 主流的深度学习开源工具.md
+++ b/source/_posts/深度学习/2021-4-21- 主流的深度学习开源工具.md
@@ -1,6 +1,7 @@
 ---
 title: 主流的深度学习开源工具
 date:   2021-04-21
+tags: 深度学习
 ---
 
 | 工具名称                           | 维护人员                         | 支持语言           |
