--- a/source/_posts/项目管理/模块设计工程师.md
+++ b/source/_posts/项目管理/模块设计工程师.md
@@ -11,8 +11,8 @@ MDE 是 Module Design Engineer 的缩写。
 ## MDE 任职要求
 1. （需求处理）完成需求对齐,分解,输出概要设计(这个有些是SE出),详细设计
 2. （模块设计）考虑模块复用,梳理内部外部依赖,确定目录结构,数据流向,对代码安全,代码质量负责
-3.  (持续优化) 技术攻关,代码重构,废弃功能管理,历史需求整理,文档优化
-4.  (知识分享) 能总结提供开发文档，提供技术培训
+3. （持续优化）技术攻关,代码重构,废弃功能管理,历史需求整理,文档优化
+4. （知识分享）能总结提供开发文档，提供技术培训
 
 ## 总结
 MDE 除了编码能力外,还需要良好的理解能力,沟通能力,以及协助他人的一个意愿。不再局限于完成自己的开发任务，需要对项目中的某个模块负责。
