--- a/source/_posts/2021年web安全问题Top10.md
+++ b/source/_posts/2021年web安全问题Top10.md
@@ -85,9 +85,17 @@ tags: web安全
 
 ## 10.服务器端请求伪造(SSRF)
 服务器A与服务器B在内网连接,服务器A对外提供服务,且有SSRF漏洞,攻击者通过服务器A获取服务器B的相关信息。
+### 危害
+* 利用file协议读取本地文件
+* 对服务器所在内网、本地进行端口扫描，获取一些服务的banner信息
+* 攻击运行在内网或本地的应用程序
+* 对内网web应用进行指纹识别，识别企业内部的资产信息
+* 攻击内外网的web应用，主要是使用HTTP GET请求就可以实现的攻击
+
+### 协议
 * file协议： 只能读取当前被攻击机的文件，内网机器文件不能读取
 
-*  dict协议：泄露安装软件版本信息，查看端口，操作内网redis服务等
+* dict协议：泄露安装软件版本信息，查看端口，操作内网redis服务等
 
 * gopher协议：gopher支持发出GET、POST请求。可以先截获get请求包和post请求包，再构造成符合gopher协议的请求。gopher协议是ssrf利用中一个最强大的协议(俗称万能协议)。可用于反弹shell
 
